--- a/press_releases.html
+++ b/press_releases.html
@@ -512,6 +512,8 @@
         </script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.5.7/jquery.fancybox.min.js"></script>
     <script src="./src/js/switch-eye.js"></script>
+    <script src="./src/js/bg.js"></script>
+
     <script src="./src/js/main.js"></script>
 </body>
 
